--- a/manual_data_sync.html
+++ b/manual_data_sync.html
@@ -54,6 +54,31 @@
         button[type="submit"]:hover {
             background-color: #3e8e41;
         }
+
+        .loader {
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #3498db;
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            animation: spin 2s linear infinite;
+            display: none;
+            margin: 0 auto;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        .syncing-text {
+            display: none;
+            margin-top: 10px;
+        }
     </style>
 </head>
 
@@ -65,11 +90,22 @@
             <input type="date" id="from-date" name="from-date" required><br><br>
             <label for="to-date" class="label">Date End:</label>
             <input type="date" id="to-date" name="to-date" required><br><br>
-            <button type="submit">Sync Data</button>
+            <button type="submit" id="submit-button">Sync Data</button>
+            <div class="loader" id="loader"></div>
+            <div class="syncing-text" id="syncing-text">Data is syncing...</div>
         </form>
     </div>
 
-
+    <script>
+        document.getElementById('sync-form').addEventListener('submit', function (e) {
+            var button = document.getElementById('submit-button');
+            var loader = document.getElementById('loader');
+            var syncingText = document.getElementById('syncing-text');
+            button.style.display = 'none';
+            loader.style.display = 'block';
+            syncingText.style.display = 'block';
+        });
+    </script>
 </body>
 
 </html>
